fix([SEB-19]): dark mode apperance

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -88,7 +88,7 @@ hr {
   width: 100px;
 
   &:before {
-    color: $color-dark-paper;
+    color: var(--color-typographic-base-font);
     content: "⦁  ⦁  ⦁";
     font-size: 15px;
   }
