--- a/src/assets/scss/themes/_dark.scss
+++ b/src/assets/scss/themes/_dark.scss
@@ -20,6 +20,7 @@
   --color-button-color: #{$color-white};
   --color-theme-switcher: #{$color-white-cloud};
   --color-theme-switcher-hover: #{$color-blue};
-  --color-tag-silver: #{$color-silver};
-  --color-tag-silver-hover: #{$color-silver-light};
+  --color-tag-silver: #{$color-dark-paper};
+  --color-tag-silver-hover: #{$color-dark-cloud};
+  --color-tag-silver-text: #{$color-white};
 }
