--- a/src/components/Feed/Feed.module.scss
+++ b/src/components/Feed/Feed.module.scss
@@ -20,7 +20,7 @@
 
         &:hover,
         &:focus {
-          border-bottom: 1px solid $color-dark;
+          border-bottom: 1px solid var(--color-typographic-base-font);
           color: var(--color-typographic-base-font);
         }
       }
@@ -43,6 +43,7 @@
 
       small {
         align-items: center;
+        color: $color-gray;
         display: flex;
         height: 26px;
         white-space: nowrap;
@@ -87,7 +88,7 @@
 
       &:hover,
       &:focus {
-        border-bottom: 1px solid $color-blue;
+        border-bottom: 1px solid var(--color-primary);
         color: var(--color-primary);
       }
     }
