--- a/src/components/Post/Meta/Meta.module.scss
+++ b/src/components/Post/Meta/Meta.module.scss
@@ -2,6 +2,7 @@
 @import "../../../assets/scss/mixins";
 
 .meta {
+  color: $color-gray;
   display: flex;
 
   p {
