--- a/src/components/Post/Tags/Tags.module.scss
+++ b/src/components/Post/Tags/Tags.module.scss
@@ -26,7 +26,7 @@
         background-color: var(--color-tag-silver);
         border: none;
         border-radius: 20px;
-        color: $color-dark-paper;
+        color: var(--color-tag-silver-text);
         display: flex;
         font-size: 12px;
         height: 26px;
